--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section>
             <div class="section-image">
-                <img src="/images/person.png" alt=""> 
+                <img src="images/person.png" alt=""> 
             </div>
             <div class="content-2">
                 <h2 class="section-title">My failures of previous year</h2>
